# tl

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
tl-example/: Cargo.toml  build.rs
tl-example/schemas/: api.tl
tl-example/src/: lib.rs  main.rs
tl-example/src/schemas/: api.rs
tl-generator/: Cargo.toml
tl-generator/src/: generate.rs  hash.rs  lib.rs  output.rs
tl-parser/: Cargo.toml
tl-parser/src/: lib.rs
tl-types/: .gitignore  Cargo.toml  build.rs
tl-types/examples/: example.rs
tl-types/src/: call.rs  definition.rs  deserialize.rs  function.rs  identify.rs  lib.rs  read.rs  reader.rs  serialize.rs
tl-types/tests/: example.rs
