[package]
name = "tl-example"
version = "0.1.0"
edition = "2024"
description = "TL example"
license = "MIT"
repository = "https://github.com/lifr0m/tl"

[dependencies]
tl-types = { path = "../tl-types" }

[build-dependencies]
tl-parser = { path = "../tl-parser" }
tl-generator = { path = "../tl-generator" }
anyhow = "1"
