[package]
name = "tl-types"
version = "0.1.0"
edition = "2024"
description = "Generated TL types to use in code"
license = "MIT"
repository = "https://github.com/lifr0m/tl"

[dependencies]
thiserror = "2"

[build-dependencies]
tl-parser = { path = "../tl-parser" }
tl-generator = { path = "../tl-generator" }
anyhow = "1"
